--- a/src/makefile
+++ b/src/makefile
@@ -1,4 +1,4 @@
 RUN:
 	yacc -d plague.y
 	lex plague.l
-	gcc lex.yy.c y.tab.c bloomFilter.c murmur3.c -lm -o ../exe/plague
+	gcc lex.yy.c y.tab.c bloomFilter.c -lm -o ../exe/plague
